// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders accept colours correctly 1`] = `
<div>
  <span
    class="sc-bdfBQB sc-dlfnuX dYkFUz hVijAa"
  >
    Button
  </span>
  ,
</div>
`;

exports[`Button component renders normal colours correctly 1`] = `
<div>
  <span
    class="sc-bdfBQB sc-gsTEea dYkFUz jefdCI"
  >
    Button
  </span>
  ,
</div>
`;
